exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for ABOUT 1`] = `
[
  238,
  277,
  304,
  352,
  416,
  476,
  552,
  608,
  640,
  692,
  714,
  831,
  864,
  912,
  930,
  1038,
  1088,
  1104,
  1280,
  1370,
  1728,
  2176
]
`;

exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for LOGO 1`] = `
[
  328,
  371,
  656,
  742,
  984,
  1113
]
`;

exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for PROJECT_DETAIL_FULL 1`] = `
[
  164,
  190,
  304,
  359,
  409,
  492,
  570,
  608,
  718,
  796,
  818,
  912,
  1077,
  1194,
  1227
]
`;

exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for PROJECT_DETAIL_HALF 1`] = `
[
  328,
  380,
  464,
  524,
  608,
  656,
  718,
  760,
  818,
  928,
  984,
  1008,
  1048,
  1140,
  1216,
  1264,
  1436,
  1584,
  1636,
  1888,
  2016,
  2528,
  3168
]
`;

exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for PROJECT_LIST_ITEM 1`] = `
[
  164,
  190,
  304,
  359,
  411,
  492,
  540,
  570,
  624,
  666,
  718,
  796,
  837,
  912,
  1032,
  1080,
  1194,
  1248,
  1332,
  1674,
  2100
]
`;
